# mchain

./: .gitignore  README.md  mchain.cabal
fakenewsData/: halfhalf.txt  lesser.txt  test.txt
src/: Main.hs  Mchain.hs
