name:                mchain
version:             0.1.0.0
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mchain
  ghc-options:         -Wall -fwarn-tabs -O2
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers
                     , MonadRandom
                     , split
                     , text
  default-language:    Haskell2010

executable Mchain
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base  >= 4.7 && < 5
                     , mchain
                     , unordered-containers
                     , MonadRandom
                     , split
                     , text
  other-modules:       Mchain